--- a/Chapitre4.tex
+++ b/Chapitre4.tex
@@ -321,6 +321,7 @@ séquence pseudo-continue, elle, fournit un meilleur rapport signal sur bruit ma
 %%%
 %%%
 \section{Le protocole complet d'acquisition}
+\label{sec:protocole}
 Aux séquences adaptées à l’imagerie morphologique nous ajoutons deux séquences qui nous
 donnent accès aux éléments dynamiques :
 \begin{itemize}
