--- a/Preambule.tex
+++ b/Preambule.tex
@@ -27,6 +27,7 @@
 
 %% Faux texte, juste pour la démo
 \usepackage{blindtext}
+\usepackage{listings}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
