ajout tableau zagzoule

--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -164,7 +164,7 @@ Le gradient est orienté de telle façon à ce qu’il soit parallèle au vaisse
 \label{fig:1_10_principe_contraste_phase}	
 \end{figure}
 Pour étudier les mouvements dans toutes les directions de l’espace, on répète ceci avec des gradients d’encodage de flux dans chacune des trois directions de l’espace. Une acquisition supplémentaire sans gradient d’encodage de flux sert de référence. Les séquences employées sont de type écho de gradient.\\
-Cette technique permet de mesurer de façon relative la vitesse et la direction des flux grâce à l’information de phase. Les flux se dirigeant vers l’examinateur sont codés en noir, ceux s’en éloignant en blanc. On peut ici mesurer des flux plus lents qu’en imagerie par temps de vol (inférieur à 10 cm/sec) \textcolor{red}{donner le temps d'acquisition}. Le contraste obtenu est adapté en particulier à la reconstruction du système veineux.\\
+Cette technique permet de mesurer de façon relative la vitesse et la direction des flux grâce à l’information de phase. Les flux se dirigeant vers l’examinateur sont codés en noir, ceux s’en éloignant en blanc. On peut ici mesurer des flux plus lents qu’en imagerie par temps de vol (inférieur à 10 cm/sec) pour une durée d'acquisition de 6 min 15 sec. Une acquisition prend . Le contraste obtenu est adapté en particulier à la reconstruction du système veineux.\\
 Les images obtenues permettent de visualiser l’ensemble des vaisseaux (Figure~\ref{fig:1_11_exemple_contraste_phase}).
 %%%
 \begin{figure}[!t]
